[project]
name = "edge-front-door-latency-testing"
version = "1.0.0"
description = "Latency testing tools for measuring Edge Front Door performance impact"
authors = [
    {name = "Engineering Team"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.24.0",
    "asyncio-throttle>=1.0.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
auth = [
    "boto3>=1.26.0",
    "botocore>=1.29.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[project.urls]
Homepage = "https://github.com/your-org/edge-front-door-latency-testing"
Repository = "https://github.com/your-org/edge-front-door-latency-testing"
