[project]
name = "edge-front-door-latency-testing"
version = "1.0.0"
description = "Latency testing tools for measuring Edge Front Door performance impact"
authors = [
    {name = "Engineering Team"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.24.0",
    "asyncio-throttle>=1.0.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
]

[dependency-groups]
auth = [
    "boto3>=1.26.0",
    "botocore>=1.29.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
sources = ["."]
only-include = [
    "simple-health-check/*.py",
    "custom-endpoints/*.py",
    "simple-health-check/README.md",
    "custom-endpoints/README.md",
    "README.md",
    "LICENSE"
]

[project.urls]
Homepage = "https://github.com/your-org/edge-front-door-latency-testing"
Repository = "https://github.com/your-org/edge-front-door-latency-testing"
